profiling-using-exp-runner/backup_FINAL_RESULTS/uniquepaths_experiment_1/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: unique_paths_cache, input size: 3
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.uniquepaths as module; up = UniquePaths(); up.unique_paths_cache(3,3); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.02983627319336 for 0.22614041 sec of execution.
